Fix scrollbar overflow

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   font-family: 'Montserrat','Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
   /*background-image: url('./assets/bg2.png');/**/
 }
 
